--- a/github_users/pubspec.yaml
+++ b/github_users/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   cupertino_icons: ^1.0.6
   rename: ^3.0.1
   flutter_launcher_icons: ^0.13.1
+  dio: ^5.4.1
+  get: ^4.6.6
 
 dev_dependencies:
   flutter_test:
